# tflite-micro

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  build.sh  requirements.txt  wrapper.h
c/: wrapper.h
src/: lib.rs  micro_interpreter.rs  micro_op_resolver.rs  operators.rs
src/tensor/: mod.rs
tests/: magic_wand.rs  micro_speech.rs  micro_speech_from_audio.rs  person_detection.rs
