[package]
	authors = ["Ian Pratt <ianjdpratt@gmail.com>"]
	edition = "2021"
	license = "MIT"
	name    = "tflite_micro"
	version = "0.1.0"

	# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
	# Building C libraries.
	cc         = { version = "1.0", features = ["parallel"] }
	pkg-config = "0.3"
