[package]
	authors = ["Ian Pratt <ianjdpratt@gmail.com>"]
	build   = "build/main.rs"
	edition = "2021"
	license = "MIT"
	name    = "tflite_micro"
	version = "0.1.0"

	[package.metadata.docs.rs]
		all-features        = false
		default-target      = "x86_64-unknown-linux-gnu"
		no-default-features = true

[dependencies]
	cpp           = "0.5"
	cty           = "0.2"
	log           = { version = "0.4", default-features = false }
	managed       = { version = "0.8", default-features = false }
	ordered-float = { version = "~2.0.0", default-features = false }

[build-dependencies]
	# Binding C/C++ libraries.
	bindgen = "0.66"

	# Building C/C++ libraries.
	cc         = { version = "1", features = ["parallel"] }
	cpp_build  = "0.5"
	pkg-config = "0.3"

	# Misc.
	fs_extra    = "1.3"   # Copying source files.
	glob        = "0.3"   # Globbing files.
	lazy_static = "1.4.0" # Loading build info into constants.
